--- a/07 - Konami Code/index.html
+++ b/07 - Konami Code/index.html
@@ -10,6 +10,7 @@
       <canvas id="falling-snow-canvas"></canvas>
       <script src="./snow-falling.js"></script>
       <script src="./start.js"></script>
+      <script src="./gta-cheat-system.js"></script>
     </body>
   </head>
 </html>
